fixed mobile horizontal scrolling

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,10 +1,14 @@
 /* Begin Custom Styles */
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 body {
   background-color: #eeeef7;
   font-family: "Montserrat", sans-serif !important;
+  position: relative;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .flex-container {
